# sidelink

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  DISCLAIMER  Dockerfile  Doxyfile  README.md  gpa_start_client_log.sh  gpa_start_server.sh  packet_helper.py  start.sh  start_client_log.sh
debian/: changelog  control  rules
debug/: .fftw_wisdom  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SRSLTEbuildinfo.cmake  cmake_install.cmake  cmake_uninstall.cmake  srsLTE.backtrace.crash
debug/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sl_send  sl_snr_file_dec
debug/lib/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/include/srslte/: CTestTestfile.cmake  Makefile  build_info.h  cmake_install.cmake  version.h
debug/lib/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/src/asn1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/src/common/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/src/phy/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/src/radio/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/src/upper/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/lib/test/asn1/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsenb/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsenb/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsenb/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsepc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsepc/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srssl/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srssl/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srssl/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsue/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsue/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/srsue/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docker/: start_client_log.sh  start_master.sh
lib/examples/: CMakeLists.txt  pdsch_ue.c  sl_recv.c  sl_send.c  sl_snr_file_dec.c  sl_snr_file_gen.c  sl_sync_file.c  usrp_capture_sync.c  usrp_tx_from_file.c
lib/include/srslte/: srslte.h
lib/src/common/: CMakeLists.txt  logger_file.cc  mac_pcap.cc  pdu.cc  thread_pool.cc
lib/src/phy/: CMakeLists.txt
lib/src/radio/: radio.cc
lib/src/upper/: rlc.cc  rlc_um.cc
srssl/: CMakeLists.txt  ue.conf.example  ue.conf.gpa
srssl/hdr/: metrics_csv.h  metrics_stdout.h  ue.h  ue_base.h  ue_metrics_interface.h
srssl/hdr/mac/: demux.h  dl_harq.h  dl_sps.h  mac.h  mac_metrics.h  mux.h  proc.h  proc_bsr.h  proc_phr.h  proc_ra.h  proc_sr.h  sl_harq.h  sl_harq_tx.h  ul_harq.h  ul_sps.h
srssl/hdr/phy/: cc_worker.h  phch_common.h  phch_recv.h  phch_worker.h  phy.h  phy_common.h  phy_metrics.h  prach.h  sf_worker.h  sync.h  ue_sl_sensing_sps.h
srssl/hdr/upper/: gw.h  gw_metrics.h  nas.h  pcsc_usim.h  rest.h  rrc.h  rrc_common.h  usim.h  usim_base.h
srssl/src/: CMakeLists.txt  main.cc  metrics_csv.cc  metrics_stdout.cc  set_net_admin_caps.cc  ue.cc  ue_base.cc
srssl/src/mac/: CMakeLists.txt  demux.cc  mac.cc  mux.cc  proc_bsr.cc  proc_phr.cc  proc_ra.cc  proc_sr.cc
srssl/src/phy/: CMakeLists.txt  cc_worker.cc  phch_common.cc  phch_recv.cc  phch_worker.cc  phy.cc  phy_common.cc  prach.cc  sf_worker.cc  sync.cc  ue_sl_sensing_sps.cc
srssl/src/phy/scell/: async_scell_recv.cc
srssl/src/stack/: ue_stack_lte.cc
srssl/src/upper/: CMakeLists.txt  gw.cc  nas.cc  pcsc_usim.cc  rest.cc  rrc.cc  usim.cc  usim_base.cc
srssl/test/: CMakeLists.txt  metrics_test.cc  rest_test.cc
srssl/test/mac/: CMakeLists.txt  mac_test.cc
srssl/test/phy/: CMakeLists.txt  ue_itf_test_prach.cc  ue_itf_test_sib1.cc
srssl/test/upper/: CMakeLists.txt  ip_test.cc  nas_test.cc  pcsc_usim_test.cc  rrc_reconfig_test.cc  usim_test.cc
srsue/test/mac/: mac_test.cc
(+257 files in other folders)
